# gitshow

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: launch.json
docs/: references.md
docs/features/: commit-graph.md  detail-panel-diff.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: git.rs
src/lib/components/detail/: CommitHeader.svelte  CommitInput.svelte  DetailPanel.svelte  DiffToolbar.svelte  DiffViewer.svelte  FileList.svelte  FileListItem.svelte  WorkingDirectory.svelte  types.ts
src/lib/components/graph/: CommitGraph.svelte  CommitNode.svelte  CommitRow.svelte  GraphEdge.svelte  graphLayout.ts  graphTypes.ts  mockExchangeData.ts  sampleData.ts
src/routes/: +page.svelte
