[package]
name = "gitshow"
version = "0.1.0"
description = "A Git GUI desktop client"
authors = ["Renan Diaz Reyes"]
edition = "2021"

[lib]
name = "gitshow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

